[tool.poetry]
name = "ris-live"
version = "0.1.0"
description = "Ingest RIS Live BGP messages"
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "ris_live"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
websockets = "^10.3"
orjson = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
